--- a/train_celeba_cls_gender.ipynb
+++ b/train_celeba_cls_gender.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), 'celeba_cls.pth')"
+    "torch.save(model.state_dict(), '/data/local/qipan/exp_celeba/celeba_cls_gender.pth')"
    ]
   },
   {
