--- a/train_celeba_cls_gender.ipynb
+++ b/train_celeba_cls_gender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cb0e4703",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a6286a7f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b5500115",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "27265a49",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0dbc6fb5",
    "metadata": {},
    "outputs": [
@@ -107,6 +107,50 @@
     "val_num = train_dl.__len__()//100\n",
     "_, valid_dl = torch.utils.data.random_split(train_dl, [train_dl.__len__()-val_num, val_num])\n",
     "print(valid_dl.__len__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "018b6181",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(162770, 1627)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dl), len(valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aa026ed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68261\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count\n",
+    "count = 0\n",
+    "for x, y in train_dl:\n",
+    "    if y == 1:\n",
+    "        count += 1\n",
+    "print(count)"
    ]
   },
   {
