code before first draft

--- a/pac_privacy.ipynb
+++ b/pac_privacy.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def confidence_noise_determination(img, D, m, c, v, beta):\n",
+    "def confidence_noise_determination(img, c, v, beta, r):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "    M: deterministic mechanism\n",
@@ -20,26 +20,27 @@
     "    Gaussian covariance matrix ΣB\n",
     "    \"\"\"\n",
     "\n",
-    "    # Step 2: Independently generate data\n",
-    "    y = img\n",
-    "\n",
     "    # Step 6: Calculate empirical mean and empirical covariance estimation\n",
-    "    mu_hat = np.mean(img, axis=(0, 3))\n",
-    "    empirical_cov = np.var(img, axis=(0, 3))\n",
+    "    mu_hat = np.mean(img, axis=0)\n",
+    "    empirical_cov = np.var(img, axis=0)\n",
     "\n",
     "    # Step 7: Apply singular value decomposition (SVD)\n",
     "    U, Lambda, UT = np.linalg.svd(empirical_cov)\n",
+    "    # print(Lambda)\n",
     "    \n",
     "    # Step 8: Determine the maximal index j0\n",
-    "    j0 = np.argmin([lambd for lambd in Lambda if lambd > c])\n",
+    "    if c > np.max(Lambda):\n",
+    "        condition = False\n",
+    "    else:\n",
+    "        j0 = np.argmin([lambd for lambd in Lambda if lambd > c])\n",
     "    \n",
-    "    # Step 9: Check the condition\n",
-    "    condition = np.min([np.abs(Lambda[j] - lambd)for j in range(1, j0 + 1) for lambd in Lambda]) > r * np.sqrt(len(Lambda) * c) + 2 * c\n",
+    "        # Step 9: Check the condition\n",
+    "        condition = np.min([np.abs(Lambda[j] - Lambda[l])for j in range(j0 + 1) for l in range(j + 1, len(Lambda))]) > r * np.sqrt(len(Lambda) * c) + 2 * c\n",
     "    \n",
     "    if condition:\n",
     "        # Step 10 & 11: Determine the j-th element of a diagonal matrix ΛB\n",
     "        sqrt_sum = sum(np.sqrt(Lambda[j] + 10 * c * v/ beta) for j in range(len(Lambda)))\n",
-    "        Lambda_B = [2 * v / np.sqrt(Lambda[j] + 10 * c * v/ beta) * sqrt_sum for j in range(len(Lambda))]\n",
+    "        Lambda_B = [2 * v / (np.sqrt(Lambda[j] + 10 * c * v/ beta) * sqrt_sum) for j in range(len(Lambda))]\n",
     "        ΛB = np.diag(Lambda_B)\n",
     "\n",
     "        # Step 13: Determine the Gaussian noise covariance\n",
@@ -54,37 +55,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from PIL import Image"
+    "from PIL import Image, ImageOps "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = '/data/local/qipan/exp_celeba/fid_samples_larger_batch_2/images_exp_10/smile/ckpt_300000'\n",
-    "img = [Image.open(os.path.join(img_dir, f)) for f in os.listdir(img_dir)]\n",
+    "img_dir = '/data/local/qipan/exp_celeba/fid_samples_larger_batch_2/images_exp_10/attractive/ckpt_300000'\n",
+    "img = [ImageOps.grayscale(Image.open(os.path.join(img_dir, f))) for f in os.listdir(img_dir)]\n",
     "img = np.array([np.array(i) for i in img])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(300, 64, 64, 3)"
+       "(1000, 64, 64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,17 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_hat = np.mean(img, axis=(0, 3))\n",
-    "empirical_cov = np.var(img, axis=(0, 3))"
+    "img = (img - np.min(img, axis=0))/ (np.max(img, axis=0)- np.min(img, axis=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empirical_cov = np.var(img, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -114,171 +123,39 @@
        "(64, 64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mu_hat.shape"
+    "empirical_cov.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U, Lambda, UT = np.linalg.svd(empirical_cov)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "j0 = np.argmin([lambd for lambd in Lambda if lambd > 20])\n",
-    "condition = np.min([np.abs(Lambda[j] - lambd)for j in range(j0 + 1) for lambd in Lambda]) > 1500 * np.sqrt(len(Lambda) * 20) + 2 * 20\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.16958464e+05, 1.82707017e+04, 1.52293405e+04, 8.56201268e+03,\n",
-       "       4.06805894e+03, 3.35912451e+03, 2.90601713e+03, 2.58754395e+03,\n",
-       "       2.07750040e+03, 1.87754155e+03, 1.80099727e+03, 1.59036000e+03,\n",
-       "       1.38040969e+03, 1.31585009e+03, 1.25248656e+03, 1.18059484e+03,\n",
-       "       1.08709934e+03, 1.02204413e+03, 9.49837709e+02, 8.42380330e+02,\n",
-       "       8.33120373e+02, 7.76822059e+02, 7.51962344e+02, 6.74389237e+02,\n",
-       "       6.48737302e+02, 6.07517126e+02, 5.76689662e+02, 5.56027967e+02,\n",
-       "       5.37717156e+02, 4.98210727e+02, 4.76233509e+02, 4.67745595e+02,\n",
-       "       4.25451191e+02, 3.95458731e+02, 3.69005804e+02, 3.44696076e+02,\n",
-       "       3.20466810e+02, 3.06256695e+02, 2.92507743e+02, 2.75177221e+02,\n",
-       "       2.48874389e+02, 2.44152626e+02, 2.18953983e+02, 2.12301174e+02,\n",
-       "       2.02348752e+02, 1.87058454e+02, 1.85877551e+02, 1.57261155e+02,\n",
-       "       1.47719867e+02, 1.36235561e+02, 1.28273276e+02, 1.22289683e+02,\n",
-       "       1.17965373e+02, 8.92001814e+01, 8.48042427e+01, 7.68762316e+01,\n",
-       "       6.22166343e+01, 5.90676194e+01, 5.00908620e+01, 3.94062324e+01,\n",
-       "       3.13323720e+01, 2.01043966e+01, 6.60345054e+00, 1.87484917e+00])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lambda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3768.126855614073"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.max(np.linalg.norm(img, axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ΣB = (sum(Lambda) + len(Lambda) * 20) / (2 * 0.5) * np.eye(len(Lambda))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3220507.5829606145"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(np.linalg.norm(ΣB))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "empirical_cov = np.var(img, axis=(0, 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[7037.31971728, 6907.88371728, 7080.88888889, ..., 7928.89207284,\n",
-       "        7963.10564321, 8066.39385062],\n",
-       "       [7071.87959877, 6847.89251358, 6983.75723951, ..., 7841.65751111,\n",
-       "        7834.80384691, 7807.0293284 ],\n",
-       "       [7016.53416667, 6914.55694321, 6919.8156284 , ..., 7612.70134691,\n",
-       "        7667.31755432, 7639.54560988],\n",
+       "array([[0.10783343, 0.10652024, 0.10708549, ..., 0.11586227, 0.1163765 ,\n",
+       "        0.11867911],\n",
+       "       [0.10817664, 0.10570074, 0.10601614, ..., 0.11445619, 0.11440364,\n",
+       "        0.11613441],\n",
+       "       [0.10759764, 0.10560437, 0.10402779, ..., 0.11260253, 0.11430152,\n",
+       "        0.11625804],\n",
        "       ...,\n",
-       "       [7142.99486914, 6763.4419    , 6521.67434444, ..., 7503.39718025,\n",
-       "        7602.0033321 , 7795.26016173],\n",
-       "       [6702.3335358 , 6406.01826667, 6422.8265321 , ..., 7352.94101111,\n",
-       "        7546.21728395, 7831.82760988],\n",
-       "       [6534.06666667, 6525.8476284 , 6541.75246914, ..., 7521.56540617,\n",
-       "        7467.32817778, 8000.25043333]])"
+       "       [0.10570882, 0.10178702, 0.09829975, ..., 0.10656897, 0.10844319,\n",
+       "        0.1101314 ],\n",
+       "       [0.10409217, 0.10076563, 0.098434  , ..., 0.10646031, 0.10824437,\n",
+       "        0.10930396],\n",
+       "       [0.10423785, 0.10187556, 0.09987599, ..., 0.1077231 , 0.10871629,\n",
+       "        0.11174058]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,44 +166,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 20\n",
-    "v = 0.5\n",
-    "beta = 0.5\n",
-    "sqrt_sum = sum(np.sqrt(Lambda[j] + 10 * c * v/ beta) for j in range(len(Lambda)))\n",
-    "Lambda_B = [2 * v / np.sqrt(Lambda[j] + 10 * c * v/ beta) * sqrt_sum for j in range(len(Lambda))]\n",
-    "ΛB = np.diag(Lambda_B)\n",
+    "import numpy as np\n",
     "\n",
-    "        # Step 13: Determine the Gaussian noise covariance\n",
-    "ΣB = U @ np.linalg.inv(ΛB) @ UT"
+    "# This is a placeholder for the actual sub-Gaussian norm computation.\n",
+    "def subgaussian_norm(X):\n",
+    "    # You would replace this with the actual calculation, which depends on the distribution of X.\n",
+    "    # For example, for a standard normal variable, the sub-Gaussian norm is 1.\n",
+    "    return 1\n",
+    "\n",
+    "def calculate_K(A):\n",
+    "    # Assuming A is a 2D numpy array of random variables.\n",
+    "    subgaussian_norms = np.array([[subgaussian_norm(A[i, j]) for j in range(A.shape[1])] for i in range(A.shape[0])])\n",
+    "    K = np.max(subgaussian_norms)\n",
+    "    return K\n",
+    "\n",
+    "# Example usage:\n",
+    "# A = np.random.randn(m, n)  # This would be your m x n random matrix with sub-Gaussian entries.\n",
+    "# K = calculate_K(A)\n",
+    "# print(K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24992504301452273"
+       "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(ΣB)"
+    "calculate_K(img[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.51987662029019\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29.057910567178592"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = 64\n",
+    "gamma = 0.5\n",
+    "m = img.shape[0]\n",
+    "r = np.max(np.linalg.norm(img, axis=(1,2)))\n",
+    "print(r)\n",
+    "c = r * (np.max([np.sqrt((d + np.log(4/gamma))/m), (d + np.log(4/gamma))/m]) + np.sqrt((d + np.log(4/gamma))/m))\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# c = 1\n",
+    "v = 0.5\n",
+    "beta = 0.5\n",
+    "ΣB = confidence_noise_determination(img, c, v, beta, r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1865.42122263,    0.        ,    0.        , ...,    0.        ,\n",
+       "           0.        ,    0.        ],\n",
+       "       [   0.        , 1865.42122263,    0.        , ...,    0.        ,\n",
+       "           0.        ,    0.        ],\n",
+       "       [   0.        ,    0.        , 1865.42122263, ...,    0.        ,\n",
+       "           0.        ,    0.        ],\n",
+       "       ...,\n",
+       "       [   0.        ,    0.        ,    0.        , ..., 1865.42122263,\n",
+       "           0.        ,    0.        ],\n",
+       "       [   0.        ,    0.        ,    0.        , ...,    0.        ,\n",
+       "        1865.42122263,    0.        ],\n",
+       "       [   0.        ,    0.        ,    0.        , ...,    0.        ,\n",
+       "           0.        , 1865.42122263]])"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ΣB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +298,7 @@
        "(64, 64)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,45 +309,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = np.random.multivariate_normal(np.zeros(d), ΣB, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "array([[-2.90755080e+01, -5.58307464e+00,  5.68848965e+01, ...,\n",
+       "         8.84992789e+00, -4.29453491e+01,  2.98019342e+01],\n",
+       "       [-3.09257814e-01, -7.54811290e+01, -1.40987420e+01, ...,\n",
+       "         2.33519696e+01, -9.88309215e+00, -1.59748082e+01],\n",
+       "       [ 1.24842973e+01, -1.84669163e+01,  7.71649799e-02, ...,\n",
+       "         7.19798498e+01,  4.59582348e+00, -5.82638597e+01],\n",
+       "       ...,\n",
+       "       [ 7.50279147e+01, -3.95651156e+01,  3.90375089e+01, ...,\n",
+       "        -1.73166254e+01, -1.04513898e+02,  4.10215176e+01],\n",
+       "       [ 5.39807790e+00, -3.64947818e+01, -2.72661970e+00, ...,\n",
+       "         1.65864998e+00,  3.24644478e+01,  2.96363470e+01],\n",
+       "       [ 1.38758207e+01, -1.94302140e+01,  2.37708890e+01, ...,\n",
+       "        -3.37397871e+01, -1.85242238e+01,  3.27796217e+01]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.min([np.abs(Lambda[j] - lambd)for j in range(j0 + 1) for lambd in Lambda])"
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-28.1264884 ,  -4.63405503,  57.84175929, ...,   9.84600632,\n",
+       "        -41.95319224,  30.79409103],\n",
+       "       [-28.11864527,  -4.63013346,  57.82215145, ...,   9.84208475,\n",
+       "        -41.95711381,  30.79409103],\n",
+       "       [-28.13433154,  -4.64581974,  57.79470047, ...,   9.84208475,\n",
+       "        -41.95711381,  30.79016946],\n",
+       "       ...,\n",
+       "       [-28.07550801,  -4.58699621,  57.85744557, ...,   9.83032005,\n",
+       "        -41.96495695,  30.77840475],\n",
+       "       [-28.07550801,  -4.58307464,  57.87705341, ...,   9.83032005,\n",
+       "        -41.96887852,  30.77840475],\n",
+       "       [-28.07550801,  -4.58307464,  57.87313184, ...,   9.83032005,\n",
+       "        -41.96887852,  30.77840475]])"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img[0] + B[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "344.0410737302445"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.linalg.norm(B, axis=1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'lambd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/common/home/qx67/Desktop/dpgen/DPgan_model/pac_privacy.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bml01.cs.rutgers.edu/common/home/qx67/Desktop/dpgen/DPgan_model/pac_privacy.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m [np\u001b[39m.\u001b[39mabs(Lambda[j] \u001b[39m-\u001b[39m lambd)\u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(j0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(j0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(Lambda))]\n",
-      "\u001b[1;32m/common/home/qx67/Desktop/dpgen/DPgan_model/pac_privacy.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bml01.cs.rutgers.edu/common/home/qx67/Desktop/dpgen/DPgan_model/pac_privacy.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m [np\u001b[39m.\u001b[39mabs(Lambda[j] \u001b[39m-\u001b[39m lambd)\u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(j0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(j0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(Lambda))]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lambd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "[np.abs(Lambda[j] - Lambda[l])for j in range(j0 + 1) for l in range(j0 + 1, len(Lambda))]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -396,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -414,5 +435,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
