--- a/pac_privacy.ipynb
+++ b/pac_privacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = '/data/local/qipan/exp_celeba/fid_samples_larger_batch_2/images_exp_10/attractive/ckpt_300000'\n",
-    "img = [ImageOps.grayscale(Image.open(os.path.join(img_dir, f))) for f in os.listdir(img_dir)]\n",
+    "img_dir = '/data/local/ml01/qipan/exp_celeba/CG_inf_smile_samples_1'\n",
+    "img = [ImageOps.grayscale(Image.open(os.path.join(img_dir, f))) for f in os.listdir(img_dir) if f.endswith('.png')]\n",
     "img = np.array([np.array(i) for i in img])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "(1000, 64, 64)"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 676,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "(64, 64)"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 679,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,28 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.10783343, 0.10652024, 0.10708549, ..., 0.11586227, 0.1163765 ,\n",
-       "        0.11867911],\n",
-       "       [0.10817664, 0.10570074, 0.10601614, ..., 0.11445619, 0.11440364,\n",
-       "        0.11613441],\n",
-       "       [0.10759764, 0.10560437, 0.10402779, ..., 0.11260253, 0.11430152,\n",
-       "        0.11625804],\n",
+       "array([[0.11790869, 0.11739077, 0.11939488, ..., 0.11712946, 0.11684583,\n",
+       "        0.11841538],\n",
+       "       [0.11736821, 0.11817271, 0.1195778 , ..., 0.11588179, 0.11610222,\n",
+       "        0.11672638],\n",
+       "       [0.11950845, 0.1186466 , 0.12033208, ..., 0.1148446 , 0.1136201 ,\n",
+       "        0.11473578],\n",
        "       ...,\n",
-       "       [0.10570882, 0.10178702, 0.09829975, ..., 0.10656897, 0.10844319,\n",
-       "        0.1101314 ],\n",
-       "       [0.10409217, 0.10076563, 0.098434  , ..., 0.10646031, 0.10824437,\n",
-       "        0.10930396],\n",
-       "       [0.10423785, 0.10187556, 0.09987599, ..., 0.1077231 , 0.10871629,\n",
-       "        0.11174058]])"
+       "       [0.11521391, 0.11247651, 0.10952726, ..., 0.10835407, 0.10918588,\n",
+       "        0.10911623],\n",
+       "       [0.11367264, 0.11108444, 0.10723971, ..., 0.10690491, 0.10693726,\n",
+       "        0.10876018],\n",
+       "       [0.1121679 , 0.11034484, 0.10784435, ..., 0.10717932, 0.10929499,\n",
+       "        0.11235355]])"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 680,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "1"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 682,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,23 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.51987662029019\n"
+      "57.54677765281298\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "29.057910567178592"
+       "29.585859319877713"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 683,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,28 +257,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1865.42122263,    0.        ,    0.        , ...,    0.        ,\n",
+       "array([[1899.85194276,    0.        ,    0.        , ...,    0.        ,\n",
        "           0.        ,    0.        ],\n",
-       "       [   0.        , 1865.42122263,    0.        , ...,    0.        ,\n",
+       "       [   0.        , 1899.85194276,    0.        , ...,    0.        ,\n",
        "           0.        ,    0.        ],\n",
-       "       [   0.        ,    0.        , 1865.42122263, ...,    0.        ,\n",
+       "       [   0.        ,    0.        , 1899.85194276, ...,    0.        ,\n",
        "           0.        ,    0.        ],\n",
        "       ...,\n",
-       "       [   0.        ,    0.        ,    0.        , ..., 1865.42122263,\n",
+       "       [   0.        ,    0.        ,    0.        , ..., 1899.85194276,\n",
        "           0.        ,    0.        ],\n",
        "       [   0.        ,    0.        ,    0.        , ...,    0.        ,\n",
-       "        1865.42122263,    0.        ],\n",
+       "        1899.85194276,    0.        ],\n",
        "       [   0.        ,    0.        ,    0.        , ...,    0.        ,\n",
-       "           0.        , 1865.42122263]])"
+       "           0.        , 1899.85194276]])"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 685,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "(64, 64)"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 686,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,28 +318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-2.90755080e+01, -5.58307464e+00,  5.68848965e+01, ...,\n",
-       "         8.84992789e+00, -4.29453491e+01,  2.98019342e+01],\n",
-       "       [-3.09257814e-01, -7.54811290e+01, -1.40987420e+01, ...,\n",
-       "         2.33519696e+01, -9.88309215e+00, -1.59748082e+01],\n",
-       "       [ 1.24842973e+01, -1.84669163e+01,  7.71649799e-02, ...,\n",
-       "         7.19798498e+01,  4.59582348e+00, -5.82638597e+01],\n",
+       "array([[ 33.04917245,  26.54839477,  15.77527837, ...,  67.87171697,\n",
+       "         -8.93766856, -37.20861235],\n",
+       "       [ 32.20830614, -56.44977472, -32.94790901, ...,   4.17772473,\n",
+       "        -14.11902775, -68.28695503],\n",
+       "       [ 39.394319  , -80.53360138,  94.60407306, ...,  34.81565998,\n",
+       "         16.00586369,  26.67996681],\n",
        "       ...,\n",
-       "       [ 7.50279147e+01, -3.95651156e+01,  3.90375089e+01, ...,\n",
-       "        -1.73166254e+01, -1.04513898e+02,  4.10215176e+01],\n",
-       "       [ 5.39807790e+00, -3.64947818e+01, -2.72661970e+00, ...,\n",
-       "         1.65864998e+00,  3.24644478e+01,  2.96363470e+01],\n",
-       "       [ 1.38758207e+01, -1.94302140e+01,  2.37708890e+01, ...,\n",
-       "        -3.37397871e+01, -1.85242238e+01,  3.27796217e+01]])"
+       "       [-52.42258874,  74.14701231, -59.80421492, ..., -31.78854223,\n",
+       "        -47.20842808,  38.91407245],\n",
+       "       [-36.0484389 , -56.65460679,  42.78897879, ...,  17.14727832,\n",
+       "        -56.79538053, -68.80298049],\n",
+       "       [  1.10826324,  97.12303954,  26.54767274, ...,  38.24023198,\n",
+       "        -69.08273574,  51.86546243]])"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 688,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,28 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-28.1264884 ,  -4.63405503,  57.84175929, ...,   9.84600632,\n",
-       "        -41.95319224,  30.79409103],\n",
-       "       [-28.11864527,  -4.63013346,  57.82215145, ...,   9.84208475,\n",
-       "        -41.95711381,  30.79409103],\n",
-       "       [-28.13433154,  -4.64581974,  57.79470047, ...,   9.84208475,\n",
-       "        -41.95711381,  30.79016946],\n",
+       "array([[ 33.04917245,  26.54839477,  15.80272935, ...,  67.98936403,\n",
+       "         -8.86315876, -37.02429862],\n",
+       "       [ 33.04917245,  26.54839477,  15.81449405, ...,  67.94622678,\n",
+       "         -8.84747248, -36.90273   ],\n",
+       "       [ 33.04917245,  26.54839477,  15.83802346, ...,  68.3187758 ,\n",
+       "         -8.65923719, -36.82037705],\n",
        "       ...,\n",
-       "       [-28.07550801,  -4.58699621,  57.85744557, ...,   9.83032005,\n",
-       "        -41.96495695,  30.77840475],\n",
-       "       [-28.07550801,  -4.58307464,  57.87705341, ...,   9.83032005,\n",
-       "        -41.96887852,  30.77840475],\n",
-       "       [-28.07550801,  -4.58307464,  57.87313184, ...,   9.83032005,\n",
-       "        -41.96887852,  30.77840475]])"
+       "       [ 33.05701559,  26.55623791,  15.86155288, ...,  68.17759933,\n",
+       "         -8.72590386, -36.96939666],\n",
+       "       [ 33.06093716,  26.56015948,  15.83018033, ...,  68.14230521,\n",
+       "         -8.80041366, -37.06351431],\n",
+       "       [ 33.080545  ,  26.57192418,  15.80665091, ...,  68.17759933,\n",
+       "         -8.74159013, -36.96155352]])"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 689,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "344.0410737302445"
+       "347.3018524820325"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
